--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "moment": "^2.22.1",
     "react": "^16.3.2",
+    "react-confirm-alert": "^2.0.2",
     "react-dom": "^16.3.2",
-    "react-scripts": "1.1.4"
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.1.4",
+    "react-skylight": "^0.5.1",
+    "react-table": "^6.8.2",
+    "react-toastify": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
